# lablaudo-bot

./: .gitignore  .goreleaser.yaml  AGENTS.md  Dockerfile  README.md  bot.py  database.py  main.py  pyproject.toml  test_bot.py  test_crawler.py  test_overdue.py  test_pdf.py
.github/: dependabot.yml
.github/workflows/: release.yml
src/lablaudo/: __init__.py  __main__.py  bot.py  crawler.py  database.py
