[project]
name = "lablaudo"
version = "0.1.0"
description = "Telegram bot for lab results monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-telegram-bot>=21.0.0",
    "apscheduler>=3.10.0"
]

[project.scripts]
lablaudo = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "crawler", "bot", "database"]

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
