[project]
name = "lablaudo"
version = "0.1.0"
description = "Telegram bot for lab results monitoring"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-telegram-bot>=21.0.0",
    "apscheduler>=3.10.0",
]

[project.scripts]
lablaudo = "lablaudo.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lablaudo"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
